<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUser"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register_a_new_account"
                android:textSize="23sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginBottom="50dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:layout_gravity="center"
                android:padding="12dp"
                android:drawablePadding="12dp"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6" />

            <!--<EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:layout_gravity="center"
                android:padding="12dp"
                android:drawablePadding="12dp"

                />-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:layout_gravity="center"
                android:padding="12dp"
                android:drawablePadding="12dp"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:background="@color/black"
                android:textColor="@color/white"
                android:padding="16dp"
                android:layout_marginTop="32dp"
                android:id="@+id/btnregister"
                />
           <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/or"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up_with"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                />
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />-->



        </LinearLayout>


    </ScrollView>


</LinearLayout>