<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    android:background="@drawable/animalavianbird"
    >

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

         <ImageView
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:src="@drawable/images"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/logo"/>


         <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:id="@+id/email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:drawablePadding="12dp"
                />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#a6a6a6" />

         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="password"
             android:textColorHint="@color/black"
             android:id="@+id/password"
             android:textColor="@color/black"
             android:inputType="textPassword"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:padding="12dp"
             android:drawablePadding="12dp"
             />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#a6a6a6" />
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Remember me "
             android:textColor="@color/black"
             android:id="@+id/remember"
             />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
             android:textStyle="bold"
             android:background="@color/black"
             android:textColor="@color/white"
             android:padding="16dp"
             android:layout_marginTop="32dp"
             android:id="@+id/btnlogin"
             />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#a6a6a6" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/new_user_create_account"
             android:textColor="@color/colorPrimaryDark"
             android:padding="13dp"
             android:layout_gravity="center_horizontal"
             android:textSize="15sp"
             android:clickable="true"
             android:focusable="true"
             android:id="@+id/signup"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/forget_password"
             android:textColor="@color/colorPrimaryDark"
             android:padding="13dp"
             android:layout_gravity="center_horizontal"
             android:textSize="15sp"
             android:clickable="true"
             android:focusable="true"
             android:id="@+id/forgetpass"
             />








</LinearLayout>
   </ScrollView>
</LinearLayout>